WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23103
Safari's auto-fill no longer works for <select> elements
https://bugs.webkit.org/show_bug.cgi?id=23103
Summary
Safari's auto-fill no longer works for <select> elements
Darin Adler
Reported
2009-01-04 09:53:46 PST
I found some unimplemented code in WebCore that was used for this.
Attachments
patch
(1.41 KB, patch)
2009-01-04 10:19 PST
,
Darin Adler
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2009-01-04 10:19:25 PST
Created
attachment 26415
[details]
patch
Darin Adler
Comment 2
2009-01-04 10:21:04 PST
<
rdar://problem/6472061
>
mitz
Comment 3
2009-01-04 10:22:30 PST
Comment on
attachment 26415
[details]
patch r=me!
Darin Adler
Comment 4
2009-01-04 10:25:35 PST
http://trac.webkit.org/changeset/39587
Note, I found this by turning on unused-variable warnings (see
bug 23102
).
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug