2009-01-04  Darin Adler  <darin@apple.com>

Reviewed by Dan Bernstein.

        Bug 23103: Safari's auto-fill no longer works for <select> elements
        https://bugs.webkit.org/show_bug.cgi?id=23103
        rdar://problem/6472061

        * bindings/objc/DOMHTML.mm:
        (-[DOMHTMLSelectElement _activateItemAtIndex:]): Implemented this.



git-svn-id: svn://svn.chromium.org/blink/trunk@39587 bbb929c8-8fbe-4397-9dbb-9b2b20218538