third_party/WebKit/WebCore/bindings/objc/DOMHTML.mm
@@ -37,6 +37,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #import "HTMLDocument.h"
 #import "HTMLInputElement.h"
 #import "HTMLObjectElement.h"
+#import "HTMLSelectElement.h"
 #import "Range.h"
 #import "RenderTextControl.h"
 #import "markup.h"
@@ -156,11 +157,12 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 @end
 
-@implementation DOMHTMLSelectElement(FormAutoFillTransition)
+@implementation DOMHTMLSelectElement (FormAutoFillTransition)
 
 - (void)_activateItemAtIndex:(int)index
 {
-    // FIXME: Needs implementation for non-NSView <select>!
+    if (WebCore::HTMLSelectElement* select = [self _HTMLSelectElement])
+        select->setSelectedIndex(index);
 }
 
 @end
